syntax = "proto3";

package rivet.backend.pkg.game_user.msg.link_complete;

import "resources/legacy/proto/common.proto";

enum GameUserLinkCompleteResolution {
	COMPLETE = 0;
	CANCEL = 1;
}

/// name = "msg-game-user-link-complete"
/// parameters = [
/// 	{ name = "link_id" },
/// ]
message Message {
	rivet.common.Uuid user_id = 1;
	rivet.common.Uuid link_id = 2;
	rivet.common.Uuid user_link_jti = 3;
	GameUserLinkCompleteResolution resolution = 4;
}
