syntax = "proto3";

package rivet.backend.pkg.game_user.msg.link_complete_fail;

import "legacy/proto/common.proto";

enum ErrorCode {
	UNKNOWN = 0;

	TOKEN_EXCHANGE_FAILED = 101;
}

/// name = "msg-game-user-link-complete-fail"
/// parameters = [
/// 	{ name = "link_id" },
/// ]
message Message {
	rivet.common.Uuid link_id = 1;
	ErrorCode error_code = 2;
}

